災害ポータル連携用ファイル出力バッチ 作成

--- a/plugins/lgdis/config/destination_list.yml
+++ b/plugins/lgdis/config/destination_list.yml
@@ -3098,3 +3098,207 @@ ext_out:
 custom_field_list:
   area:
     id: 3
+
+# 災害情報ポータル連携バッチ処理
+# 連携対象プロジェクトID
+link_disaster_portal_project_id: 1
+
+# 災害情報ポータル連携バッチ処理
+# feed情報 auther名
+link_disaster_portal_auther_name: "石巻市市役所"
+
+# 災害情報ポータル連携バッチ処理
+# feed情報 auther E-MAIL
+link_disaster_portal_auther_email: "email@email"
+
+# 災害情報ポータル連携バッチ処理
+# 連携対象トラッカーID
+#
+# 連携不要なトラッカー行には行頭に#を付ける
+#
+link_disaster_portal_tracker_ids:
+  - 77  # 【システム】J-ALERT 発信（内閣官房）
+  - 78  # 【システム】J-ALERT 発信（気象庁）
+  - 4   # 【システム】気象庁発信（警報・注意報）
+  - 3   # 【システム】気象庁発信（その他）
+#  - 6   # 【システム】河川管理者発信（警報・注意報）
+#  - 5   # 【システム】河川管理者発信（その他）
+#  - 16  # 【システム】災害対策本部設置
+#  - 1   # 【システム】避難勧告・指示
+#  - 2   # 【システム】避難所開設・閉鎖
+#  - 17  # 【システム】被害要約（概況）
+#  - 18  # 【システム】被害要約（状況）
+#  - 7   # 【被害報告】人的
+#  - 8   # 【被害報告】住家建物
+#  - 33  # 【被害報告】非住家建物
+#  - 9   # 【被害報告】道路
+#  - 10  # 【被害報告】橋梁
+#  - 76  # 【被害報告】電気
+#  - 11  # 【被害報告】上水道
+#  - 12  # 【被害報告】下水道
+#  - 13  # 【被害報告】ガス設備
+#  - 14  # 【被害報告】通信網
+  - 34  # 【被害報告】高等学校
+  - 35  # 【被害報告】中学校
+  - 36  # 【被害報告】小学校
+  - 37  # 【被害報告】幼稚園
+  - 38  # 【被害報告】保育所
+#  - 39  # 【被害報告】災害弱者関連施設
+#  - 40  # 【被害報告】医療施設
+#  - 41  # 【被害報告】災害重要施設
+#  - 15  # 【被害報告】その他
+#  - 22  # 道路交通事故に関する情報
+#  - 23  # 路上故障車に関する情報
+#  - 24  # 路上障害物に関する情報
+#  - 26  # 道路火災に関する情報
+#  - 67  # 火災・救急・救助の要請
+#  - 68  # 海上に関する情報
+#  - 69  # 河川に関する情報
+#  - 70  # 広域圏災害に関する情報
+#  - 28  # 被災者からの要望（生活全般）
+#  - 71  # 被災者からの要望（食料）
+#  - 29  # 被災者からの要望（物資・資材）
+#  - 48  # その他の災害関連情報
+#  - 20  # 【広報-交通】道路通行規制に関する情報
+#  - 21  # 【広報-交通】道路渋滞に関する情報
+#  - 25  # 【広報-交通】道路工事に関する情報
+#  - 27  # 【広報-交通】道路路面状況に関する情報
+#  - 42  # 【広報-交通】鉄道の運行に関する情報
+#  - 72  # 【広報-交通】バスの運行に関する情報
+#  - 73  # 【広報-交通】航空路の運行に関する情報
+#  - 74  # 【広報-交通】船舶路の運行に関する情報
+#  - 75  # 【広報-交通】その他公共交通の運行に関する情報
+#  - 55  # 【広報-ライフライン】給水に関する情報
+#  - 50  # 【広報-ライフライン】電気に関する情報
+#  - 43  # 【広報-ライフライン】上水道に関する情報
+#  - 44  # 【広報-ライフライン】下水道に関する情報
+#  - 45  # 【広報-ライフライン】ガスに関する情報
+#  - 46  # 【広報-ライフライン】通信網に関する情報
+#  - 51  # 【広報-ライフライン】臨時災害放送に関する情報
+#  - 52  # 【広報-生活情報】行政手続きに関する情報
+#  - 62  # 【広報-生活情報】安置所に関する情報
+#  - 63  # 【広報-生活情報】災害習得物に関する情報
+#  - 60  # 【広報-生活情報】炊き出し・物資配布に関する情報
+#  - 61  # 【広報-生活情報】入浴サービスに関する情報
+#  - 66  # 【広報-生活情報】営業店舗に関する情報
+#  - 59  # 【広報-生活情報】医療に関する情報
+#  - 56  # 【広報-生活情報】健康・福祉・介護に関する情報
+#  - 54  # 【広報-生活情報】学校・幼稚園・保育所に関する情報
+#  - 57  # 【広報-生活情報】環境に関する情報
+#  - 58  # 【広報-生活情報】防犯に関する情報
+#  - 64  # 【広報-生活情報】ボランティアの支援を受けたい方への情報
+#  - 65  # 【広報-生活情報】ボランティア活動をしたい方への情報
+#  - 53  # 【広報-生活情報】その他の被災者支援に関する情報
+
+
+# 災害情報ポータル連携バッチ処理
+# グループごとに出力項目を定義する
+#
+# 記述例
+# チケットのコントロールプレーン部の場合
+# label: "(表示させるラベル名を書く)"
+# value: "issue.XXX" XXXはテーブルの項目名
+#
+# チケットのカスタムフィールドの場合
+# label: "(表示させるラベル名を書く)"
+# value: "issue.custom_field_value(XXX)" XXXはカスタムフィールドID
+#
+link_disaster_portal_group:
+  group_01: &grp01
+    -
+      label: "発表日時"
+      value: "issue.published_at.strftime('%Y/%m/%d %H:%M:%S')"
+    -
+      label: "事象の発生場所"
+      value: "issue.custom_field_value(30)"
+
+  group_02: &grp02
+    -
+      label: "発表日時"
+      value: "issue.published_at.strftime('%Y/%m/%d %H:%M:%S')"
+    -
+      label: "在校者死亡数"
+      value: "issue.custom_field_value(286)"
+
+  group_09: &grp09
+    -
+      label: "発表日時"
+      value: "issue.published_at.strftime('%Y/%m/%d %H:%M:%S')"
+
+# 災害情報ポータル連携バッチ処理
+# トラッカーごとにグループを指定する
+#
+link_disaster_portal_tracker_group:
+  77: *grp01  # 【システム】J-ALERT 発信（内閣官房）
+  78: *grp01  # 【システム】J-ALERT 発信（気象庁）
+  4:  *grp01  # 【システム】気象庁発信（警報・注意報）
+  3:  *grp01  # 【システム】気象庁発信（その他）
+  6:  *grp09  # 【システム】河川管理者発信（警報・注意報）
+  5:  *grp09  # 【システム】河川管理者発信（その他）
+  16: *grp09  # 【システム】災害対策本部設置
+  1:  *grp09  # 【システム】避難勧告・指示
+  2:  *grp09  # 【システム】避難所開設・閉鎖
+  17: *grp09  # 【システム】被害要約（概況）
+  18: *grp09  # 【システム】被害要約（状況）
+  7:  *grp09  # 【被害報告】人的
+  8:  *grp09  # 【被害報告】住家建物
+  33: *grp09  # 【被害報告】非住家建物
+  9:  *grp09  # 【被害報告】道路
+  10: *grp09  # 【被害報告】橋梁
+  76: *grp09  # 【被害報告】電気
+  11: *grp09  # 【被害報告】上水道
+  12: *grp09  # 【被害報告】下水道
+  13: *grp09  # 【被害報告】ガス設備
+  14: *grp09  # 【被害報告】通信網
+  34: *grp02  # 【被害報告】高等学校
+  35: *grp02  # 【被害報告】中学校
+  36: *grp02  # 【被害報告】小学校
+  37: *grp02  # 【被害報告】幼稚園
+  38: *grp02  # 【被害報告】保育所
+  39: *grp09  # 【被害報告】災害弱者関連施設
+  40: *grp09  # 【被害報告】医療施設
+  41: *grp09  # 【被害報告】災害重要施設
+  15: *grp09  # 【被害報告】その他
+  22: *grp09  # 道路交通事故に関する情報
+  23: *grp09  # 路上故障車に関する情報
+  24: *grp09  # 路上障害物に関する情報
+  26: *grp09  # 道路火災に関する情報
+  67: *grp09  # 火災・救急・救助の要請
+  68: *grp09  # 海上に関する情報
+  69: *grp09  # 河川に関する情報
+  70: *grp09  # 広域圏災害に関する情報
+  28: *grp09  # 被災者からの要望（生活全般）
+  71: *grp09  # 被災者からの要望（食料）
+  29: *grp09  # 被災者からの要望（物資・資材）
+  48: *grp09  # その他の災害関連情報
+  20: *grp09  # 【広報-交通】道路通行規制に関する情報
+  21: *grp09  # 【広報-交通】道路渋滞に関する情報
+  25: *grp09  # 【広報-交通】道路工事に関する情報
+  27: *grp09  # 【広報-交通】道路路面状況に関する情報
+  42: *grp09  # 【広報-交通】鉄道の運行に関する情報
+  72: *grp09  # 【広報-交通】バスの運行に関する情報
+  73: *grp09  # 【広報-交通】航空路の運行に関する情報
+  74: *grp09  # 【広報-交通】船舶路の運行に関する情報
+  75: *grp09  # 【広報-交通】その他公共交通の運行に関する情報
+  55: *grp09  # 【広報-ライフライン】給水に関する情報
+  50: *grp09  # 【広報-ライフライン】電気に関する情報
+  43: *grp09  # 【広報-ライフライン】上水道に関する情報
+  44: *grp09  # 【広報-ライフライン】下水道に関する情報
+  45: *grp09  # 【広報-ライフライン】ガスに関する情報
+  46: *grp09  # 【広報-ライフライン】通信網に関する情報
+  51: *grp09  # 【広報-ライフライン】臨時災害放送に関する情報
+  52: *grp09  # 【広報-生活情報】行政手続きに関する情報
+  62: *grp09  # 【広報-生活情報】安置所に関する情報
+  63: *grp09  # 【広報-生活情報】災害習得物に関する情報
+  60: *grp09  # 【広報-生活情報】炊き出し・物資配布に関する情報
+  61: *grp09  # 【広報-生活情報】入浴サービスに関する情報
+  66: *grp09  # 【広報-生活情報】営業店舗に関する情報
+  59: *grp09  # 【広報-生活情報】医療に関する情報
+  56: *grp09  # 【広報-生活情報】健康・福祉・介護に関する情報
+  54: *grp09  # 【広報-生活情報】学校・幼稚園・保育所に関する情報
+  57: *grp09  # 【広報-生活情報】環境に関する情報
+  58: *grp09  # 【広報-生活情報】防犯に関する情報
+  64: *grp09  # 【広報-生活情報】ボランティアの支援を受けたい方への情報
+  65: *grp09  # 【広報-生活情報】ボランティア活動をしたい方への情報
+  53: *grp09  # 【広報-生活情報】その他の被災者支援に関する情報
+
