--- a/plugins/lgdis/config/api_key.yml.example
+++ b/plugins/lgdis/config/api_key.yml.example
@@ -17,3 +17,9 @@ openam:
   idp_sso_target_url: "http://app.isk.local:8080/openam/SSORedirect/metaAlias/idp"
   idp_cert_fingerprint: "DE:XX:...EE:33"
   name_identifier_format: "urn:oasis:names:tc:SAML:1.1:nameid-format:emailAddres"
+
+# Google Map API key
+# * 有償版を利用する場合は、購入したclient_idを設定する
+# * 無償版を利用する場合は、空文字を設定する
+google_map:
+  client_id: ""
