--- a/plugins/lgdis/config/custom_field_connection.yml.example
+++ b/plugins/lgdis/config/custom_field_connection.yml.example
@@ -9,6 +9,7 @@ custom_field_connection:
     - 1005
 
 # カスタムフィールド(マップ入力機能)の設定
+# 対象項目設定
 # * すべて「テキスト」であること
 # * 下記書式で「大分類」「中分類」「小分類」「住所」のカスタムフィールドIDを記載すること
 #
@@ -18,3 +19,9 @@ custom_field_address:
     - 1007
     - 1008
     - 1009
+# マップのズーム率設定
+# * 下記書式で「大分類」「中分類」「小分類」のズーム率を記載すること
+zoom_rate:
+ - 13
+ - 15
+ - 17
