外部配信RSS情報はRescueには入れず、DB処理のみしかしない。（配信はバッチでまとめて行う為）

--- a/plugins/lgdis/config/destination_list.yml
+++ b/plugins/lgdis/config/destination_list.yml
@@ -177,6 +177,10 @@ delivery_place_group_deployed_mail: &delivery_place_group_deployed_mail
   - *smtp_2
   - *smtp_3
 
+# RSS情報
+delivery_place_rss: &delivery_place_rss
+  - *atom
+
 # 自動配信時先リスト
 # *号配備の際に自動配信する外部配信先を設定
 # 外部配信先が追加削除された際は修正必要
