設定ファイルの記入例追加、コメント文補完

--- a/plugins/lgdis/config/custom_field_connection.yml.example
+++ b/plugins/lgdis/config/custom_field_connection.yml.example
@@ -1,29 +1,32 @@
-# カスタムフィールド(地域情報連動機能)の設定
-# * すべて「リストから選択」であること
-# * 下記書式で「大分類」「中分類」「小分類」をカスタムフィールドIDを記載すること
-#
+## カスタムフィールド(地域情報連動機能)の設定
+
+# 対象項目設定
+# * 下記書式で「発生地区(大域)」「発生地区(中域)」「発生地区(小域)」のカスタムフィールドIDを記載すること
+# * すべて「リストから選択」形式のカスタムフィールドであること
 custom_field_connection:
   -
     - 1003
     - 1004
     - 1005
 
-# カスタムフィールド(マップ入力機能)の設定
+## カスタムフィールド(マップ入力機能)の設定
+
 # Google Fusion Tables
+# * テーブルの識別子
 google_fusion_tables:
   id: 1wVRsRYtnqjtYd4tMVAJt_zlS9TnOznTQdlGk9_g
 # 対象項目設定
-# * すべて「テキスト」であること
-# * 下記書式で「大分類」「中分類」「小分類」「住所」のカスタムフィールドIDを記載すること
-#
+# * 下記書式で「発生地区(大域)」「発生地区(中域)」「発生地区(小域)」「発生場所」のカスタムフィールドIDを記載すること
+# * 発生地区は「テキスト」形式、発生場所は「長いテキスト」形式のカスタムフィールドであること
 custom_field_address:
   -
-    - 1006
-    - 1007
-    - 1008
-    - 1009
+    - 189
+    - 420
+    - 421
+    - 30
 # マップのズーム率設定
-# * 下記書式で「大分類」「中分類」「小分類」のズーム率を記載すること
+# * 下記書式で「発生地区(大域)」「発生地区(中域)」「発生地区(小域)」のズーム率を記載すること
+# * 設定値や値域はGoogle Maps APIの仕様に依る
 zoom_rate:
  - 13
  - 15
